# Voxnap

./: .gitignore  .mcp.json  AGENTS.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.antigravity/: mcp.json
.github/workflows/: ci.yml  mobile.yml  release.yml  web.yml
apps/desktop/: README.md  index.html  package.json  vite.config.ts
apps/desktop/src/: main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: accelerator.rs  audio.rs  commands.rs  error.rs  lib.rs  main.rs  mel.rs  models.rs  onnx_engine.rs  state.rs  whisper.rs  whisper_tokens.rs
apps/mobile/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/mobile/src/: index.css  main.tsx
apps/mobile/src-tauri/: Cargo.toml  tauri.conf.json
apps/mobile/src-tauri/capabilities/: default.json
apps/mobile/src-tauri/src/: lib.rs  main.rs
apps/web/: README.md  index.html  package.json  tailwind.config.cjs  vite.config.ts
apps/web/public/whisper/: README.md
apps/web/src/: index.css  main.tsx
apps/web/src/workers/: pcm-capture.worklet.ts  whisper.worker.ts
docs/: graphify.md  onnx-npu.md
scripts/: fetch-model.mjs  fetch-onnx-model.mjs  install-graphify.mjs
