[package]
name = "voxnap-desktop"
version = "0.1.0"
description = "Voxnap desktop — Tauri 2 shell with native whisper.cpp transcription."
authors = ["Voxnap"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77"

# The entry point is `src/main.rs` for the desktop binary, and `src/lib.rs`
# is also exposed as a library so the mobile crate can re-use the pipeline.
[lib]
name = "voxnap_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.0.4", features = [] }
tauri-plugin-dialog = "2.0.1"
tauri-plugin-fs = "2.0.1"
tauri-plugin-log = "2.0.0"
tauri-plugin-os = "2.0.0"
tauri-plugin-shell = "2.0.1"
tauri-plugin-store = "2.1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "sync", "fs", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Model downloader: streamed HTTPS via rustls (no native OpenSSL dependency).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"

# Audio capture (cross-platform: WASAPI / CoreAudio / ALSA / AAudio).
cpal = "0.15"

# Lock-free SPSC ring buffer for audio handoff.
ringbuf = "0.4"

# whisper.cpp Rust bindings. Enable hardware acceleration features as needed
# per platform via Cargo features (see `[features]` below).
whisper-rs = { version = "0.16", default-features = false }

[features]
# Compile-time switches that map to whisper.cpp's CMake flags.
#
# The default set is empty (= pure CPU whisper.cpp) so plain
# `cargo build` works on any machine without extra toolchains. Real
# release builds opt into hardware acceleration via the matrix below
# AND via the target-conditional `[target.…]` blocks at the bottom of
# this file (which auto-enable Metal/CoreML on Apple platforms).
#
# Manual overrides (use these if you build outside CI):
#
#   cargo build --features metal       # Apple GPU (auto on macOS)
#   cargo build --features coreml      # Apple Neural Engine (auto on macOS/iOS)
#   cargo build --features cuda        # NVIDIA GPU  (Windows/Linux, opt-in)
#   cargo build --features openblas    # Faster CPU matmul (any OS)
default = []
metal = ["whisper-rs/metal"]
cuda = ["whisper-rs/cuda"]
coreml = ["whisper-rs/coreml"]
openblas = ["whisper-rs/openblas"]

# ---------------------------------------------------------------------------
# Target-conditional defaults
# ---------------------------------------------------------------------------
#
# Cargo unions features across `[dependencies]` and any matching
# `[target.…]` blocks, so adding `features = [...]` to whisper-rs here
# turns those flags ON automatically when building for that target —
# without anyone having to pass `--features …` on the CLI.
#
# Rationale per platform:
#
# • macOS  → Metal + CoreML are *always* present on every supported Mac
#   (Apple Silicon ships ANE; Intel Macs ship a Metal-capable GPU). The
#   produced binary still falls back to CPU at runtime if a model lacks
#   a CoreML encoder, so enabling these features is safe for *all* Macs.
#
# • iOS    → CoreML is the only sane path on-device. Always on.
#
# • Windows / Linux → CUDA is **not** auto-enabled. A CUDA-linked binary
#   refuses to start on machines without the NVIDIA driver + CUDA runtime
#   DLLs, so we ship CUDA as a *separate* "Voxnap-NVIDIA" artifact in CI
#   (see `.github/workflows/release.yml`). Vanilla Windows/Linux builds
#   stay pure CPU (works on every machine).
#
# • Android → CPU only. No standardised GPU/NPU path in whisper.cpp yet.
[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.16", default-features = false, features = ["metal", "coreml"] }

[target.'cfg(target_os = "ios")'.dependencies]
whisper-rs = { version = "0.16", default-features = false, features = ["coreml"] }

# Tauri's mobile target needs special handling; this profile is also used
# from `apps/mobile/src-tauri`.
[target."cfg(any(target_os = \"android\", target_os = \"ios\"))".dependencies]
tauri = { version = "2.0.4", features = [] }
