[package]
name = "voxnap-desktop"
version = "0.1.0"
description = "Voxnap desktop — Tauri 2 shell with native whisper.cpp transcription."
authors = ["Voxnap"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77"

# The entry point is `src/main.rs` for the desktop binary, and `src/lib.rs`
# is also exposed as a library so the mobile crate can re-use the pipeline.
[lib]
name = "voxnap_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "sync", "fs", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Model downloader: streamed HTTPS via rustls (no native OpenSSL dependency).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"

# Audio capture (cross-platform: WASAPI / CoreAudio / ALSA / AAudio).
cpal = "0.15"

# Lock-free SPSC ring buffer for audio handoff.
ringbuf = "0.4"

# whisper.cpp Rust bindings. Enable hardware acceleration features as needed
# per platform via Cargo features (see `[features]` below).
whisper-rs = { version = "0.16", default-features = false }

# ONNX Runtime bindings — used by the parallel `onnx_engine` pipeline that
# targets NPU/GPU execution providers (DirectML on Windows, CoreML on Apple,
# QNN for Qualcomm Hexagon, OpenVINO for Intel, …). The `download-binaries`
# feature ships pre-built ORT 1.24 dylibs alongside the binary so users
# don't need a separate ORT install. EPs themselves still need their
# vendor-supplied DLLs at runtime; ort returns "EP not registered" if they
# are missing, which `accelerator.rs` surfaces as `unavailableReason`.
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "download-binaries", "copy-dylibs", "tls-native"] }
# Must match the ndarray major version `ort` depends on (currently 0.17),
# otherwise the `From<ArrayView<...>>` impls don't line up and
# `TensorRef::from_array_view` rejects our tensors at compile time.
ndarray = "0.17"

# Whisper-via-ONNX building blocks (used by `onnx_engine` Phase 2):
#   • `rustfft`     — STFT inside the log-mel feature extractor.
#   • `tokenizers`  — HuggingFace's BPE/WordPiece runtime; we load the
#                     `tokenizer.json` shipped alongside ONNX Whisper
#                     bundles (vocab + merges baked in).
#   • `num-complex` — complex-number arithmetic for FFT bins.
rustfft = "6"
num-complex = "0.4"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }


[features]
# Compile-time switches that map to whisper.cpp's CMake flags AND ort's
# execution-provider feature flags.
#
# The default set is empty (= pure CPU whisper.cpp + ORT CPU EP) so plain
# `cargo build` works on any machine without extra toolchains. Real
# release builds opt into hardware acceleration via the matrix below
# AND via the target-conditional `[target.…]` blocks at the bottom of
# this file (which auto-enable Metal/CoreML on Apple platforms).
#
# Manual overrides (use these if you build outside CI):
#
#   cargo build --features metal           # Apple GPU (auto on macOS)
#   cargo build --features coreml          # Apple Neural Engine (auto on macOS/iOS)
#   cargo build --features cuda            # NVIDIA GPU  (Windows/Linux, opt-in)
#   cargo build --features openblas        # Faster CPU matmul (any OS)
#   cargo build --features ort-directml    # Windows DirectML (any GPU/NPU via DX12)
#   cargo build --features ort-cuda        # NVIDIA via ORT CUDA EP
#   cargo build --features ort-openvino    # Intel iGPU/NPU via OpenVINO EP
#   cargo build --features ort-qnn         # Qualcomm Hexagon NPU via QNN EP
#   cargo build --features ort-coreml      # Apple ANE/GPU via ORT CoreML EP
default = []
metal = ["whisper-rs/metal"]
cuda = ["whisper-rs/cuda"]
coreml = ["whisper-rs/coreml"]
openblas = ["whisper-rs/openblas"]

# ORT execution-provider feature flags. Each flag turns on the matching EP
# at compile time so ort registers it; the EP DLLs themselves must still
# be present at runtime (DirectML.dll ships with Win10+; OpenVINO/QNN need
# vendor SDKs).
ort-directml = ["ort/directml"]
ort-cuda     = ["ort/cuda"]
ort-openvino = ["ort/openvino"]
ort-qnn      = ["ort/qnn"]
ort-coreml   = ["ort/coreml"]

# Convenience meta-feature: enable every ORT EP that whisper-rs's whisper.cpp
# can't already cover. Used by the "Voxnap-Universal" CI artifact which is
# the binary that flips every NPU/GPU bucket from "Not bundled" to
# "Available" at runtime, modulo the host actually shipping the hardware.
#
# We deliberately don't put this on by default because each EP pulls in a
# vendor SDK at link time on some platforms.
ort-all = ["ort-directml", "ort-cuda", "ort-openvino", "ort-qnn", "ort-coreml"]


# ---------------------------------------------------------------------------
# Target-conditional defaults
# ---------------------------------------------------------------------------
#
# Cargo unions features across `[dependencies]` and any matching
# `[target.…]` blocks, so adding `features = [...]` to whisper-rs here
# turns those flags ON automatically when building for that target —
# without anyone having to pass `--features …` on the CLI.
#
# Rationale per platform:
#
# • macOS  → Metal + CoreML are *always* present on every supported Mac
#   (Apple Silicon ships ANE; Intel Macs ship a Metal-capable GPU). The
#   produced binary still falls back to CPU at runtime if a model lacks
#   a CoreML encoder, so enabling these features is safe for *all* Macs.
#
# • iOS    → CoreML is the only sane path on-device. Always on.
#
# • Windows / Linux → CUDA is **not** auto-enabled. A CUDA-linked binary
#   refuses to start on machines without the NVIDIA driver + CUDA runtime
#   DLLs, so we ship CUDA as a *separate* "Voxnap-NVIDIA" artifact in CI
#   (see `.github/workflows/release.yml`). Vanilla Windows/Linux builds
#   stay pure CPU (works on every machine).
#
# • Android → CPU only. No standardised GPU/NPU path in whisper.cpp yet.
[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.16", default-features = false, features = ["metal", "coreml"] }
# On macOS we also turn on ORT's CoreML EP so the ONNX pipeline can
# transparently target Apple Neural Engine — accelerator detection then
# lights up the ANE row even on builds that didn't pass `--features
# ort-coreml` on the CLI.
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "download-binaries", "copy-dylibs", "tls-native", "coreml"] }

[target.'cfg(target_os = "ios")'.dependencies]
whisper-rs = { version = "0.16", default-features = false, features = ["coreml"] }
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "download-binaries", "copy-dylibs", "tls-native", "coreml"] }

# ---------------------------------------------------------------------------
# Windows: auto-enable DirectML.
# ---------------------------------------------------------------------------
#
# DirectML.dll ships with every Windows 10 1903+ install (and is part of
# the OS feature surface on Windows 11), so flipping `ort/directml` on by
# default is a *free* win — it gives every Windows user GPU/NPU acceleration
# through DirectX 12 without forcing them to rebuild Voxnap with manual
# `--features ort-directml` flags. This is also what unlocks NPU detection
# on Copilot+ / Intel Core Ultra / AMD Ryzen AI laptops out of the box,
# because DirectML on Windows 11 24H2+ enumerates the NPU as a D3D12
# compute device.
#
# QNN and OpenVINO still require their vendor SDKs at link time, so we
# don't auto-enable them — those stay opt-in via `--features ort-qnn` /
# `--features ort-openvino`. The Voxnap-Universal CI artifact is the
# binary that ships with all four EPs at once.
[target.'cfg(target_os = "windows")'.dependencies]
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "download-binaries", "copy-dylibs", "tls-native", "directml"] }

# Tauri's mobile target needs special handling; this profile is also used
# from `apps/mobile/src-tauri`.
[target."cfg(any(target_os = \"android\", target_os = \"ios\"))".dependencies]
tauri = { version = "2", features = [] }
