[package]
name = "voxnap-mobile"
version = "0.1.0"
description = "Voxnap mobile (iOS / Android) — Tauri 2 Mobile shell."
authors = ["Voxnap"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "voxnap_mobile_lib"

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.0.4", features = [] }

# Re-export the entire desktop pipeline. The desktop crate already exposes
# `pub fn run()` and all its modules — the mobile binary just calls it.
voxnap-desktop = { package = "voxnap-desktop", path = "../../desktop/src-tauri" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

# Tauri's mobile target hides the entry-point behind a macro.
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri = { version = "2.0.4", features = [] }
